<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="398dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/search_module"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:srcCompat="@drawable/ic_baseline_profile"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/modules"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:srcCompat="@drawable/ic_baseline_menu_book_24"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/maitain_module"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="105dp"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/ic_baseline_library_books_24"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="123dp"
        android:layout_height="123dp"
        app:layout_constraintEnd_toEndOf="@+id/modules"
        app:layout_constraintTop_toTopOf="@+id/maitain_module"
        app:srcCompat="@drawable/ic_baseline_engineering_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:text="@string/profile"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/modules"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/modules"
        app:layout_constraintTop_toBottomOf="@+id/modules" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:text="@string/maintain_module_admin"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/maitain_module"
        app:layout_constraintTop_toBottomOf="@+id/maitain_module" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="79dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:text="@string/maintain_tutor_admin"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>